--- a/config-mock/src/main/resources/mbg.properties
+++ b/config-mock/src/main/resources/mbg.properties
@@ -1,11 +1,11 @@
-projectName=config--mock
-#modelPackage=com.wxw.model
-mapperXmlPackage=mapper
+projectName=config-mock
+modelPackage=com.wxw.model
+mapperXmlPackage=com.wxw.mapper
 mapperPackage=com.wxw.mapper
 
-mysql.connector=D:/repository/mysql/mysql-connector-java/5.1.41/mysql-connector-java-5.1.41.jar
+mysql.connector=C:/Users/admin/.m2/repository/mysql/mysql-connector-java/5.1.41/mysql-connector-java-5.1.41.jar
 
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.183:3306/scb_basej?useUnicode=true&characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/com_me?useUnicode=true&characterEncoding=utf8&useSSL=false
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
